# cognitive-symbiont

./: .coveragerc  .dockerignore  .editorconfig  .env.example  .gitignore  README.md  SYMBIONT_HARDENING_SUMMARY.md  VERSION  app.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-optional.txt  requirements.txt  ruff.toml
bigkit_v3alpha/: app.py
configs/: config-lite.yaml  config.yaml  crews.yaml  plugins.example.yml  watch_targets.yaml
data/: symbiont.db
docs/: QUICKSTART.md
sandbox/: Dockerfile  docker-compose.yml
scripts/: autopilot.sh  demo_async_foresight.py  demo_foresight_engine.py  offline_llm.py  tutorial_walkthrough.py
symbiont/: __init__.py  cli.py  guards.py  orchestrator.py
systems/: CouplingMap.csv  Cynefin.md  Foresight.md  LeverageList.md  Loops.md  MentalModels.md
tests/: conftest.py  test_adversarial_resilience.py  test_chaos_adversarial.py  test_chaos_injection.py  test_chaos_resilience.py  test_cli_init.py  test_cli_quickstart.py  test_cycle_meta.py  test_daemon_foresight_integration.py  test_daemon_retry.py  test_dynamic_crews.py  test_dynamics_weaver.py  test_external_cache.py  test_external_sources.py  test_foresight.py  test_foresight_weaver.py  test_graph_handoff.py  test_graph_langinterop.py  test_graph_runner_external.py  test_guard_judge.py  test_hybrid_basics.py  test_hybrid_eval.py  test_initiative_pubsub.py  test_initiative_state.py  test_llm_client_cmd.py  test_memory_backends.py  test_orchestrator_external.py  test_orchestrator_plugins.py  test_plugin_registry.py  test_property_graphs.py  (+15 more)
(+154 files in other folders)
